--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -3,6 +3,7 @@
     padding: (60px - grid-gap) 0 60px 0
     background-color: darkGreyColor
     min-height: 345px
+    display: none
 
     &__row
         min-height: 114px
