--- a/markup/components/layout-default/layout-default.pug
+++ b/markup/components/layout-default/layout-default.pug
@@ -19,6 +19,8 @@ html(class="no-js", lang="en")
 
         block footer
 
+        .page__overlay
+            block popups
         block scripts
         script(src='%=static=%js/separate-js/jquery-ui.min.js')
         script(src='%=static=%js/main%=hash=%%=min=%.js')
