--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -1,2 +1,25 @@
 .header
     display: block
+    position: relative
+    z-index: 100
+
+    &__search-bar
+        position: absolute
+        top: 100%
+        left: 0
+        display: none
+        width: 100%
+        height: 88px
+
+    &__navbar_mobile
+        display: none
+
+        .logo__text
+            display: none
+
+    +below(768px)
+        &__navbar
+            display: none
+
+            &_mobile
+                display: block
