--- a/markup/components/icon-button/icon-button.styl
+++ b/markup/components/icon-button/icon-button.styl
@@ -5,3 +5,11 @@
     vertical-align: middle
     text-align: center
     text-decoration: none
+
+    &__icon
+
+        &_fill
+            fill: darkGreyColor
+
+        &_stroke
+            stroke: darkGreyColor
