--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -7,7 +7,8 @@ block header
     +header
 
 block content
-    +model-list
+    +photo-tape
+    //+model-list
 
 block scripts
     script(src='%=static=%js/separate-js/ajax/model-list-load.js')
