--- a/markup/components/container/container.styl
+++ b/markup/components/container/container.styl
@@ -2,3 +2,7 @@
     display: block
     width: container-width
     margin: 0 auto
+
+    +below(768px)
+        width: 100%
+        padding: 0 12px
