add grid adaptive

--- a/markup/components/model-list/model-list.pug
+++ b/markup/components/model-list/model-list.pug
@@ -8,15 +8,15 @@ include ../side-border-btn/side-border-btn
 mixin model-list()
     +b.model-list&attributes(attributes)
         +container
-            +filter
+            +filter.hide-mob
             +e.header
                 +e.header-col._flexible
                     +e.H1.heading Independent
                         span 38970
-                +e.header-col
+                +e.header-col.hide-mob
                     +e.label Sort by
                     +selectbox('Date').__control
-                +e.header-col
+                +e.header-col.hide-mob
                     +button.A(href='#')._dark._uppercase.__control View on map
             +grid-masonry(4, '.model-preview').js-model-preview-grid
                 +model-preview([7, 7, 7], 'Sonya', 20, 325, true)
