--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -8,7 +8,7 @@ block header
 
 block content
     +photo-tape
-    //+model-list
+    +model-list
 
 block scripts
     script(src='%=static=%js/separate-js/ajax/model-list-load.js')
