--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -1,22 +1,34 @@
-a.button
-    display: flex
-    justify-content: center
-    align-items: center
-
 .button
-    display: table-cell
+    display: block
     background-color: transparent
-    border: 1px solid borderColor
-    vertical-align: middle
+    border: 1px solid transparent
     text-align: center
     text-decoration: none
-    height: 60px
+    line-height 3.75
     padding: 0 30px
     font-size: 16px
+    cursor pointer
 
     &_uppercase
         text-transform: uppercase
 
-    &_dark
-        background-color darkGreyColor
-        color #fff
+    &_color
+        &_white
+            color #fff
+
+        &_main
+            color mainColor
+
+    &_bg
+        &_darkGrey
+            background-color darkGreyColor
+
+        &_grey
+            background-color #212223
+
+    &_border
+        &_standart
+            border-color borderColor
+
+        &_grey
+            border-color #262728;
