--- a/markup/components/model-list/model-list.styl
+++ b/markup/components/model-list/model-list.styl
@@ -30,6 +30,9 @@
         letter-spacing initial
         font-weight: 400
 
+        +below(768px)
+            font-size: 26px
+
         span
             display: inline-block
             vertical-align top
