--- a/markup/components/search-bar/search-bar.pug
+++ b/markup/components/search-bar/search-bar.pug
@@ -5,4 +5,4 @@ mixin search-bar()
         +e.INPUT.input(type='text' name='search' placeholder='search')
         +e.BUTTON.button(type='submit')
             != pugHelpers.Icon.call(locals, {iconName: 'search', className: 'search-bar__icon', iconWidth: '16', iconHeight: '16'})
-        +icon-button('close', 16, 16).__close
+        +icon-button('close', 16, 16, 'icon-button__icon icon-button__icon_fill').__close
