--- a/markup/components/navbar/navbar.styl
+++ b/markup/components/navbar/navbar.styl
@@ -85,6 +85,12 @@
         line-height: 1.1875
         font-size: 16px
 
+        &_dark
+            color: darkGreyColor
+
+        &_solo
+            margin-top: 0
+
     &__badge
         position: absolute
         display: flex
