add model-list search

--- a/markup/components/grid/grid.pug
+++ b/markup/components/grid/grid.pug
@@ -13,7 +13,7 @@ mixin grid()
         block
 
 mixin grid-masonry(columns, blockClass)
-    +grid.js-masonry(data-columns=columns data-block=blockClass)&attributes(attributes)
+    +grid.grid_masonry.js-masonry(data-columns=columns data-block=blockClass)&attributes(attributes)
         block
 
 mixin col(number)
