--- a/markup/components/grid/grid.styl
+++ b/markup/components/grid/grid.styl
@@ -9,6 +9,9 @@ grid-modifiers = ( one two three four five six seven eight nine ten elevel twelv
     margin-left -(grid-gap / 2)
     margin-right -(grid-gap / 2)
 
+    &_masonry
+        justify-content: center
+
     &first-of-type
         margin-top -grid-gap
 
