added: arrow up, banner-welcome. adaptive: popup-welcome

--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -8,6 +8,7 @@
     padding: 0 30px
     font-size: 16px
     cursor pointer
+    letter-spacing 1px
 
     &_uppercase
         text-transform: uppercase
@@ -32,3 +33,6 @@
 
         &_grey
             border-color #262728;
+
+        &_light-white
+            border-color rgba(#fff, .2)
