--- a/markup/components/popup-welcome/popup-welcome.pug
+++ b/markup/components/popup-welcome/popup-welcome.pug
@@ -10,8 +10,8 @@ mixin popup-welcome()
             +e.P.description is an innovative and dynamic educational and life skills program for students and professionals aged 18 to 35
             +e.info-container
                 +count-info('Independent', '41908').__count-info
-                +e.divider
                 +count-info('Agency’s', '2154').__count-info
             +e.buttons
                 +button()._uppercase._bg_grey._color_main.__button yes, I have 18
                 +button()._uppercase._border_grey.__button no, I don’t have 18
+                +e.A(href='#').terms Terms of use
