--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -2,8 +2,9 @@ extends ../components/layout-default/layout-default
 include ../components/header/header
 include ../components/footer/footer
 include ../components/model-list/model-list
-include ../components/image-bg/image-bg
 include ../components/popup-welcome/popup-welcome
+include ../components/arrow-up/arrow-up
+include ../components/banner-welcome/banner-welcome
 
 block header
     +header
@@ -11,6 +12,7 @@ block header
 block content
     +photo-tape
     +model-list
+    +arrow-up
 
 block scripts
     script(src='%=static=%js/separate-js/ajax/model-list-load.js')
