--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -19,7 +19,7 @@ html, body
     font-family fontMain
     font-weight 400
     font-size: 0
-    letter-spacing 1/16em
+    letter-spacing .0625em
     background-color: bgColor
 
     &__overlay
@@ -38,6 +38,11 @@ html, body
         position: relative
         min-height 100%
         margin-bottom -50px
+
+        .arrow-up
+            position absolute
+            right 35px
+            bottom 85px
 
     &__buffer
         height 50px
