--- a/markup/components/popup-welcome/popup-welcome.styl
+++ b/markup/components/popup-welcome/popup-welcome.styl
@@ -9,6 +9,9 @@
         font-family fontSecond
         font-weight 400
 
+        +below(768px)
+            font-size 26px
+
     &__description
         opacity .4
         font-size 16px
@@ -18,6 +21,11 @@
         padding-left 65px
         padding-right 65px
 
+        +below(540px)
+            padding-left 5px
+            padding-right 5px
+            margin-top 25px
+
     &__img
         height 183px
         width 100%
@@ -26,27 +34,58 @@
         padding: 65px 95px 70px;
         background-color darkGreyColor
 
+        +below(768px)
+            padding 30px
+
     &__info-container
         margin-top 30px
         display flex
         justify-content center
 
-    &__divider
-        width 1px
-        height 36px
-        background-color #262728
-        margin-left 30px
-        margin-right 30px
+        +above(768px)
+            margin-right 30px
 
     &__buttons
         display flex
         justify-content space-between
         margin-top 37px
 
+        +below(768px)
+            flex-direction column
+
     &__button
         max-width 258px
         flex-grow 1
         letter-spacing 1px
 
+        +below(768px)
+            max-width 100%
+
+        &:not(:first-child)
+            +below(768px)
+                margin-top 10px
+
     &__count-info
-        min-width 104px
+        border-left 1px solid transparent
+        padding-right 28px
+
+        &:not(:first-of-type)
+            border-color: #262728
+            padding-left 28px
+
+        &:last-of-type
+            padding-right 0
+
+    &__terms
+        opacity .5
+        font-size 16px
+        letter-spacing 1px
+        text-align center
+        color #fff
+        text-transform uppercase
+        text-decoration none
+        line-height 19px
+        margin-top 20px
+
+        +above(768px)
+            display none
