--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -5,6 +5,7 @@ include ../components/model-list/model-list
 include ../components/popup-welcome/popup-welcome
 include ../components/arrow-up/arrow-up
 include ../components/banner-welcome/banner-welcome
+include ../components/boost/boost
 
 block header
     +header
