--- a/markup/components/button/button.styl
+++ b/markup/components/button/button.styl
@@ -17,6 +17,10 @@
         &_white
             color #fff
 
+        &_grey
+            color #fff
+            opacity .7
+
         &_main
             color mainColor
 
