--- a/markup/static/stylus/mixins.styl
+++ b/markup/static/stylus/mixins.styl
@@ -76,7 +76,7 @@ transition(value1, value2 = false)
 
 /*
 Миксин для изображений.
-Нужен, чтобы картинка заполняла другой блок подобно background-size: cover
+Нужен, чтобы картинка заполняла другой блок подобно background-$size: cover
 Пример использования:
 div {
   fill-img
@@ -94,3 +94,58 @@ fill-img()
     width 0
     min-width 100%
     min-height 100%
+
+/*
+Миксин для базовых параметров псевдоэлементов.
+Пример использования:
+div::after {
+  @include pseudo;
+  top: 10px;
+  left: 10px;
+  width: 150px;
+}
+*/
+pseudo(display = block, pos = absolute, content = "")
+  content: content
+  display: display
+  position: pos
+/*
+Миксин для треугольников, сделанных через :before и :after
+Пример:
+div::after {
+  @include triangle(black, top, 10px);
+}
+*/
+triangle($color, $direction, $size = 6px, position = absolute, $round = false)
+
+  pseudo()
+
+  width: 0
+  height: 0
+
+  if $round
+    border-radius: 3px
+
+  if $direction == down
+    border-left: $size solid transparent
+    border-right: $size solid transparent
+    border-top: $size solid $color
+    margin-top: (0 - round($size / 2.5))
+
+  else if $direction == up
+    border-left: $size solid transparent
+    border-right: $size solid transparent
+    border-bottom: $size solid $color
+    margin-bottom: (0 - round($size / 2.5))
+
+  else if $direction == right
+    border-top: $size solid transparent
+    border-bottom: $size solid transparent
+    border-left: $size solid $color
+    margin-right: -1*$size
+
+  else if $direction == left
+    border-top: $size solid transparent
+    border-bottom: $size solid transparent
+    border-right: $size solid $color
+    margin-left: -1*$size
